basecode for miniproject 1

--- a/partI/Gradle_ex02_solution/.settings/org.eclipse.jdt.core.prefs
+++ b/partI/Gradle_ex02_solution/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Fri Dec 04 17:42:49 GMT 2015
+#Tue Oct 10 13:42:25 BST 2017
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.8
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
